--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1177,6 +1177,14 @@
     padding: 50px;
 }
 
+.contacts-content .contacts-desc::after {
+    content: ' ';
+    display: block;
+    height: 1px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .1);
+}
+
 .contacts-content .location .loc-title::after {
     content: ' ';
     display: block;
@@ -1202,11 +1210,24 @@
 }
 
 .contacts-form {
-    padding: 30px;
-    background-color: #000;
+    padding: 20px;
+    background-color: #c3c3c31a;
     width: 100%;
-    height: 550px;
-    color: #fff;
+    color: #000;
+    -webkit-box-shadow: 0 0 3px 0 rgb(0 0 0 / 50%);
+    -moz-box-shadow: 0 0 3px 0 rgb(0 0 0 / 50%);
+    -ms-box-shadow: 0 0 3px 0 rgb(0 0 0 / 50%);
+    -o-box-shadow: 0 0 3px 0 rgb(0 0 0 / 50%);
+    box-shadow: 0 0 3px 0 rgb(0 0 0 / 50%);
+}
+
+.contacts-form .contacts-form-title h5::after {
+    content: ' ';
+    display: block;
+    height: 3px;
+    width: 28%;
+    margin: auto;
+    background-color: #676767;
 }
 
 @media (max-width: 992px) {
@@ -1221,8 +1242,33 @@
 .contacts-form textarea,
 .contacts-form textarea:focus,
 .contacts-form textarea:active {
+    background-color: #e9e9e9;
+    color: #000;
+    outline-width: 0;
+    outline: none;
+    box-shadow: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid #676767;
+    border-radius: 0;
+}
+
+textarea {
+    resize: none;
+}
+
+.contacts-form button {
     background-color: #2a2a2a;
     color: #fff;
+    padding: 5px 40px;
+    border-radius: 0;
+}
+
+.contacts-form button:hover {
+    background-color: #c3c3c31a;
+    color: #000;
+    border: 1px solid #676767;
 }
 
 .form-req {
