--- a/public/assets/css/admin-style.css
+++ b/public/assets/css/admin-style.css
@@ -90,3 +90,10 @@
     }
 }
 /* End contacts page */
+
+/* Start services page */
+.admin-service-img {
+    width: 100%;
+    height: 100px;
+}
+/* End services page */
