--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -46,6 +46,15 @@
     color: #fff !important;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
 
 /* End top navbar */
 
