--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -663,6 +663,13 @@ input[type=number] {
     }
 }
 
+.profile-content .profile-title h3,
+.profile-content .values-header h3,
+.profile-content .vision-title h3,
+.profile-content .strength-title h3 {
+    font-weight: bold;
+}
+
 
 /* End company profile page */
 
